fixed spelling, and about font spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -72,7 +72,24 @@ h6 {
 .about-me {
   margin: 100px 50px 50px 50px;
 }
-.headshot {
+
+.about-me h1 {
+  font-weight: 600;
+  font-size: 70px;
+  line-height: 80px;
+  color: var(--primary-color);
+}
+
+.about-me h2 {
+  color: var(--primary-color);
+}
+
+.about-me p {
+  font-size: 16px;
+  line-height: 25px;
+  font-weight: 500;
+}
+.head-shot {
   width: 500px;
   border-radius: 4px;
 }
